--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +17,58 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+ul, li {
+  list-style: none;
+}
+
+.todo-list {
+  margin: 50px;
+}
+
+.header {
+  text-transform: capitalize;
+}
+
+.todo-list_header {
+  font-weight: 300;  
+}
+
+.todo-list_header2 {
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.todo-list_action {
+  display: flex;
+  flex-direction: column;
+}
+
+.todo-list_input {
+  width: 600px;
+  height: 30px;
+  padding: 3px;
+}
+
+.todo-list_submit {
+  color: white;
+  width: 90px;
+  height: 30px;
+  border-radius: 3px;
+  background-color: blue;
+  margin: 15px 0 20px;
+}
+
+.todo-list_item {
+  width: 600px;
+  height: 50px;
+  padding: 15px;
+  border: solid 1px darkgrey;
+  margin-bottom: 5px;
+}
+
